# gEmbedded

./: .gitignore  LICENSE.md  Notes.txt  README.md  pom.xml
gEmbedded-api/: pom.xml
gEmbedded-api/src/main/java/com/comert/gEmbedded/api/database/: README.md
gEmbedded-api/src/main/java/com/comert/gEmbedded/api/device/: Device.java  DeviceConstant.java  DeviceFactory.java
gEmbedded-api/src/main/java/com/comert/gEmbedded/api/device/exception/: DeviceException.java  DeviceExecutionException.java  ExceptionMessage.java  I2CMasterConfigurationException.java  IOException.java  InstanceCreationException.java  InstanceIsNotCreatedException.java  JNIException.java  PinConfigurationException.java  ProviderException.java  TimeOutException.java
gEmbedded-api/src/main/java/com/comert/gEmbedded/api/device/factory/: DeviceFactory.java
gEmbedded-api/src/main/java/com/comert/gEmbedded/api/device/gpio/: GPIOFactory.java
gEmbedded-api/src/main/java/com/comert/gEmbedded/api/device/i2c/: I2CMasterFactory.java
gEmbedded-api/src/test/java/com/comert/gEmbedded/api/device/: DeviceFactoryUTest.java  DeviceUTest.java
gEmbedded-api/src/test/java/com/comert/gEmbedded/api/provider/: ProviderFactoryUTest.java
gEmbedded-component/: pom.xml
gEmbedded-component/src/main/java/com/comert/gEmbedded/component/: LCD1602.java  MPU6050.java
gEmbedded-driver/: copy.sh  header.sh  pom.xml
gEmbedded-driver/src/main/c/native/: CMakeLists.txt
gEmbedded-driver/src/main/c/native/bcm2711/: CMakeLists.txt
gEmbedded-driver/src/main/c/native/bcm2711/driver/: CMakeLists.txt
gEmbedded-driver/src/main/c/native/bcm2711/driver/include/: common.h  gpiodriver.h
gEmbedded-driver/src/main/c/native/bcm2711/driver/include/system/: gpio.h
gEmbedded-driver/src/main/c/native/bcm2711/driver/src/: gpiodriver.c
gEmbedded-driver/src/main/c/native/bcm2711/include/: bcm2711common.h
gEmbedded-driver/src/main/c/native/bcm2711/lib/: CMakeLists.txt
gEmbedded-driver/src/main/c/native/bcm2711/lib/include/: common.h  jninative.h
gEmbedded-driver/src/main/c/native/bcm2711/lib/src/: gpio.c  jninative.c  mapper.c
gEmbedded-driver/src/main/c/native/bcm2711/src/: CMakeLists.txt  gpiodriver.c  i2cmasterdriver.c
gEmbedded-driver/src/main/c/native/bcm2711/test/: CMakeLists.txt  gpiotest.c  main.c  mappertest.c
gEmbedded-driver/src/main/c/native/bcm2711/test/include/: gpiotest.h  jninativetest.h  jvmtest.h  mappertest.h  testcommon.h
gEmbedded-driver/src/main/c/native/bcm2711/test/src/: gpiotest.c  jninativetest.c  jvmtest.c  main.c  mappertest.c
gEmbedded-driver/src/main/c/native/include/: common.h  gpiodriver.h  jnicontroller.h  jnicontrollertest.h  jvm.h  jvmtest.h  mapper.h
gEmbedded-driver/src/main/c/native/jni/: com_comert_gEmbedded_nativeinterface_DeviceController.h  com_comert_gEmbedded_nativeinterface_I2CMasterController.h
gEmbedded-driver/src/main/c/native/jni/include/: com_comert_gEmbedded_nativeinterface_DeviceController.h  com_comert_gEmbedded_nativeinterface_GPIOController.h  com_comert_gEmbedded_nativeinterface_I2CMasterController.h  common.h  gpiodriver.h  i2cmasterdriver.h  jnicontroller.h  mapper.h
gEmbedded-driver/src/main/c/native/jni/src/: devicecontroller.c  gpiocontroller.c  i2cmastercontroller.c  jnicontroller.c  mapper.c
gEmbedded-driver/src/main/c/native/lib/controller/: gpiocontroller.c  gpioexception.c  jnicontroller.c
gEmbedded-driver/src/main/c/native/lib/include/: gpio.h  i2cmaster.h  jninative.h  mapper.h
gEmbedded-driver/src/main/c/native/lib/src/: device.c  gpio.c  i2cmaster.c  i2cmaster_.c  jninative.c  mapper.c
gEmbedded-driver/src/main/c/native/lib/temp/: gpiotest.c  gpiotest.h  i2cmasterdriver.h  i2cmasterexception.h  jnicontroller.h  jninativetest.c  jvm.c  mapper.h  mappertest.c
gEmbedded-driver/src/main/c/native/src/: CMakeLists.txt  gpiocontroller.c  gpiodriver.c  i2cmastercontroller.c  i2cmasterdriver.c  jnicontroller.c  mapper.c
gEmbedded-driver/src/main/c/native/test/: CMakeLists.txt  gpiodrivertest.c  jnicontrollertest.c  jvm.c  jvmtest.c  main.c  mappertest.c
gEmbedded-driver/src/main/c/native/test/include/: commontest.h  gpiodrivertest.h  gpiotest.h
gEmbedded-driver/src/main/c/native/test/src/: gpiodrivertest.c  main.c  utils.S
gEmbedded-driver/src/main/java/com/comert/gEmbedded/nativeinterface/: DeviceController.java  DeviceDriver.java  GPIOController.java  I2CMasterController.java  I2CMasterDriver.java
gEmbedded-driver/src/main/java/com/comert/gEmbedded/nativeinterface/util/: NativeUtils.java
gEmbedded-driver/src/test/java/com/comert/gEmbedded/nativeinterface/: DeviceControllerTest.java  DeviceDriverTest.java
gEmbedded-raspberrypi/: pom.xml
gEmbedded-raspberrypi/gEmbedded-raspberrypi-4B/: build.xml  copy.sh  header.sh  pom.xml
gEmbedded-raspberrypi/gEmbedded-raspberrypi-4B/src/main/c/native/: CMakeLists.txt
gEmbedded-raspberrypi/gEmbedded-raspberrypi-4B/src/main/c/native/include/: com_comert_gEmbedded_pi_nativeinterface_DeviceController.h  com_comert_gEmbedded_pi_nativeinterface_GPIOController.h  com_comert_gEmbedded_pi_nativeinterface_I2CMasterController.h  common.h  gpiodriver.h  gpioexception.h  i2cmasterdriver.h  jnicontroller.h  mapper.h
gEmbedded-raspberrypi/gEmbedded-raspberrypi-4B/src/main/c/native/src/: CMakeLists.txt  devicecontroller.c  gpiocontroller.c  gpiodriver.c  i2cmastercontroller.c  i2cmasterdriver.c  i2cmasterexception.c  jnicontroller.c  mapper.c
gEmbedded-raspberrypi/gEmbedded-raspberrypi-4B/src/main/c/native/test/: CMakeLists.txt  gpiotest.c  jvm.c  main.c  mappertest.c
gEmbedded-raspberrypi/gEmbedded-raspberrypi-4B/src/main/c/native/test/include/: gpiotest.h  mappertest.h
(+96 files in other folders)
